Mobile CSS fix for page spilling off right side of devices

--- a/amani/themes/amani_zen/sass/mobile/_footer.scss
+++ b/amani/themes/amani_zen/sass/mobile/_footer.scss
@@ -149,11 +149,11 @@
     position: absolute;
     display: block;
     top: 0px;
-    left: -9998px;
+    left: 0;
     height: 100%;
     z-index: -1;
-    border-right: 9999px solid $grey;
-    box-shadow: 9999px 0px 0px 0px $grey;
+    border-right: 0;
+    box-shadow: 0;
   }
 
   a {
